Fix margin for fieldset legend to ensure consistent spacing

--- a/src/nationalarchives/components/fieldset/fieldset.scss
+++ b/src/nationalarchives/components/fieldset/fieldset.scss
@@ -10,6 +10,7 @@
   }
 
   &__legend {
+    margin: 0;
   }
 
   &__heading {
